# embedding-server-github-rust

./: Cargo.toml  README.md  format.sh
src/: main.rs  utils.rs
