[package]
name = "embedding_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9"
log = "0.4"
clap = "3.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[build]
jobs = 8  # 使用 8 个核心进行编译
